Fixed Footer Alignment

--- a/css/footer.css
+++ b/css/footer.css
@@ -232,7 +232,7 @@ footer {
        order: 2;
        position: absolute;
        left: 0;
-       top: 37.5%;
+       top: 39%;
        width: 30%;
    }
 }
